<?xml version="1.0"?>
<project
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.remsfal</groupId>
    <artifactId>remsfal-backend</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <packaging>pom</packaging>
    <name>remsfal - Backend</name>

    <modules>
        <module>remsfal-core</module>
        <module>remsfal-service</module>
    </modules>

    <scm>
        <connection>scm:git:git@github.com:remsfal/remsfal-backend.git</connection>
        <developerConnection>scm:git:git@github.com:remsfal/remsfal-backend.git</developerConnection>
        <url>https://github.com/remsfal/remsfal-backend</url>
    </scm>
    
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/remsfal/remsfal-backend/issues</url>
    </issueManagement>

    <properties>
        <compiler-plugin.version>3.14.0</compiler-plugin.version>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.style.configDirectory>src/main/style</project.style.configDirectory>
        <surefire-plugin.version>3.5.2</surefire-plugin.version>
        <failsafe-plugin.version>3.5.3</failsafe-plugin.version>
        <checkstyle-plugin.version>3.6.0</checkstyle-plugin.version>
        <sonar-plugin.version>5.1.0.4751</sonar-plugin.version>
        <sonar.organization>remsfal</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.coverage.jacoco.xmlReportPaths>
            ${maven.multiModuleProjectDirectory}/target/site/jacoco/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
        <sonar.java.checkstyle.reportPaths>${project.build.directory}/checkstyle-result.xml</sonar.java.checkstyle.reportPaths>
        <sonar.cpd.exclusions>
                de.remsfal.service.entity.dto\**
        </sonar.cpd.exclusions>
    </properties>

    <profiles>
      <profile>
        <id>githubDeploy</id>
        <distributionManagement>
          <repository>
            <id>github</id>
            <name>GitHub Remsfal Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/remsfal/remsfal-backend</url>
          </repository>
        </distributionManagement>
        </profile>
    </profiles>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                    <configuration>
                        <compilerArgs>
                            <arg>-parameters</arg>
                            <arg>-proc:full</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                    <configuration>
                        <runOrder>alphabetical</runOrder>
                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
                        <trimStackTrace>false</trimStackTrace>
                        <systemPropertyVariables>
                            <java.util.logging.manager>
                                org.jboss.logmanager.LogManager
                            </java.util.logging.manager>
                            <maven.home>${maven.home}</maven.home>
                            <quarkus.jacoco.data-file>
                                ${maven.multiModuleProjectDirectory}/target/site/jacoco/jacoco.exec
                            </quarkus.jacoco.data-file>
                            <quarkus.jacoco.reuse-data-file>true</quarkus.jacoco.reuse-data-file>
                            <quarkus.jacoco.report-location>
                                ${maven.multiModuleProjectDirectory}/target/site/jacoco
                            </quarkus.jacoco.report-location>
                        </systemPropertyVariables>
                        <!-- includes>
                            <include>AuthenticationResourceMockitoTest.java</include>
                        </include -->
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${failsafe-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                            <configuration>
                                <systemPropertyVariables>
                                    <native.image.path>
                                        ${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                                    <java.util.logging.manager>
                                        org.jboss.logmanager.LogManager</java.util.logging.manager>
                                    <maven.home>${maven.home}</maven.home>
                                </systemPropertyVariables>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>${sonar-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${checkstyle-plugin.version}</version>
                    <configuration>
                        <configLocation>${project.style.configDirectory}/checkstyle.xml</configLocation>
                        <excludeGeneratedSources>true</excludeGeneratedSources>
                        <consoleOutput>true</consoleOutput>
                        <failsOnError>true</failsOnError>
                        <linkXRef>false</linkXRef>
                    </configuration>
                    <executions>
                        <execution>
                            <id>validate</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
